Fix bottom wheel show white space
Why:
* https://github.com/Subvisual-Academy/subvisuwheel/issues/106

How:
* Adding display: flex to the wrapper

--- a/frontend/src/pages/SocialPage/index.module.css
+++ b/frontend/src/pages/SocialPage/index.module.css
@@ -39,4 +39,5 @@
   position: absolute;
   bottom: 0;
   left: 0;
+  display: flex;
 }
